force-app/main/default/objects/Account/fields/d4c_Entity__c.field-meta.xml
<CustomField>
    <fullName>d4c_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>d4c_Entity__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>