force-app/main/default/objects/Account/fields/ht_NPNStatus__c.field-meta.xml
<CustomField>
    <fullName>ht_NPNStatus__c</fullName>
    <formula>IF(
    ISBLANK(ht_NPN__c) || ISBLANK(ht_Producer__c),
    &quot;&quot;,

    IF(
        ISBLANK(TEXT(ht_Producer__r.ht_NPNStatus__c)),
        &quot;🔘 Not Synced&quot;,

        CASE(
            TEXT(ht_Producer__r.ht_NPNStatus__c),
            &quot;Processing&quot;, &quot;🟠 Processing&quot;,
            &quot;Invalid NPN&quot;, &quot;🔴 Invalid NPN&quot;,
            &quot;Sync Disabled&quot;, &quot;⛔ Sync Disabled&quot;,
            &quot;Active&quot;,
                IF(
                    ISPICKVAL(ht_Producer__r.ht_Type__c, &apos;Agency&apos;),
                    &quot;🟢 Active&quot;,
                    &quot;🔴 Error&quot;
                ),
            &quot;🔴 Error&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPN Status</label>
    <type>Text</type>
</CustomField>