force-app/main/default/objects/Account/fields/ht_NPNSyncError__c.field-meta.xml
<CustomField>
    <fullName>ht_NPNSyncError__c</fullName>
    <formula>IF(
  AND(
    TEXT(ht_Producer__r.ht_NPNStatus__c) = &quot;Active&quot;,
    ISPICKVAL(ht_Producer__r.ht_Type__c, &apos;Agent&apos;)
  ),
  &quot;NPN is for an Agent (Not an Agency)&quot;,

  IF(
    TEXT(ht_Producer__r.ht_NPNStatus__c) = &quot;Invalid NPN&quot;,
    &quot;The NPN was rejected by NIPR&quot;,

    IF(
      OR(
        TEXT(ht_Producer__r.ht_NPNStatus__c) = &quot;Active&quot;,
        TEXT(ht_Producer__r.ht_NPNStatus__c) = &quot;Processing&quot;
      ),
      &quot;&quot;,
      ht_Producer__r.ht_NPNSyncError__c
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPN Sync Error</label>
    <type>Text</type>
</CustomField>