force-app/main/default/objects/Account/fields/ht_Producer__c.field-meta.xml
<CustomField>
    <fullName>ht_Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>ht_Producer__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>